--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3653,3 +3653,21 @@
     model: Q27 4G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Q9T9IN Build/NHG47K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 64.0.3282.137
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Qilive
+    model: Q9 9.0"
+  os_family: Android
+  browser_family: Chrome
