--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8551,6 +8551,12 @@ Lava:
     - regex: 'Lava[ _]?([^/;]+)(?:/| Build)'
       model: '$1'
 
+# SKG (skgmobile.net | skgmobile.com)
+SKG:
+  regex: '(Modern[ _](?:S10?|S[3679]))(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
 # Landvo
 Landvo:
   regex: 'XM[123]00|(?<!Blade )S6 Build'
@@ -14127,7 +14133,7 @@ Sanyo:
 
 # Qilive
 Qilive:
-  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|8T10IN|8S55IN4G2|8S[56]IN4G|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
+  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|8T10IN|8S55IN4G2|8S[56]IN4G|9T9IN|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
   device: 'smartphone'
   models:
     - regex: 'Q7S5IN4G'
@@ -14163,6 +14169,9 @@ Qilive:
       device: 'tablet'
     - regex: 'Q9T7IN4G'
       model: 'Q9 7.0" 4G'
+      device: 'tablet'
+    - regex: 'Q9T9IN'
+      model: 'Q9 9.0"'
       device: 'tablet'
     - regex: 'Q9T10IN4G'
       model: 'Q9 10.1" 4G'
