--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3671,3 +3671,75 @@
     model: Q9 9.0"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; TRUE BEYOND TAB 3G Build/JRO03C)
+  os:
+    name: Android
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 'True'
+    model: Beyond Tab 3G
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; Vi10 Build/KTU84P)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Chuwi
+    model: Vi10
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; Vi10 Plus Build/LMY49J)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Chuwi
+    model: Vi10 Plus
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; Vi10Pro Build/KTU84P)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Chuwi
+    model: Vi10 Pro
+  os_family: Android
+  browser_family: Android Browser
