--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3797,3 +3797,39 @@
     model: Primo 81
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; VIA_S18) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.162 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 80.0.3987.162
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Casper
+    model: VIA S18
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; VIA_S17) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Casper
+    model: VIA S17
+  os_family: Android
+  browser_family: Chrome
